<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
    <TextView
        android:id="@+id/reg_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/register_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/reg_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/back_btn" />

    <EditText
        android:id="@+id/reg_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg_phone"
        android:layout_below="@+id/reg_back"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="License number"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/reg_pwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg_pwd1"
        android:layout_below="@+id/reg_pwd1"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/register_pwd2_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reg_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_license"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/register_phone_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/reg_pwd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg_phone"
        android:layout_below="@+id/reg_phone"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/register_pwd1_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/reg_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_license"
        android:layout_alignParentRight="true"
        android:text="@string/login_register_btn" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_pwd2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/reg_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reg_name"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="39dp"
        android:layout_toLeftOf="@+id/reg_label"
        android:ems="10"
        android:hint="Size"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/reg_airconditioned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/reg_name"
        android:layout_alignTop="@+id/reg_size"
        android:text="Airconditioned?" />

    <EditText
        android:id="@+id/reg_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/reg_airconditioned"
        android:ems="10"
        android:hint="Company name" />

</RelativeLayout>
